# stimsym

./: .gitignore  .merlin  .ocamlinit  .travis.yml  LICENSE  Makefile  README.adoc  README.md  _oasis  _tags  dune-project  myocamlbuild.ml  opam  setup.ml  stimsym-server.opam  stimsym.opam
.github/workflows/: main.yml
data/: kernel.json  notebook1.ipynb  notebook_examples.ipynb
doc/: examples.adoc  examples.md
src/cli/: cli.ml  dune  jbuild  stimsym_cli.ml
src/core/: Base_types.ml  Bit_set.ml  Bit_set.mli  Builtins.ml  Builtins.mli  Builtins_advanced.ml  Builtins_advanced.mli  Completion.ml  Completion.mli  Document.ml  Document.mli  Eval.ml  Eval.mli  Expr.ml  Expr.mli  Hash.ml  Hash.mli  Lexer.mll  Lexer_full_form.mli  Lexer_full_form.mll  META  Parse_loc.ml  Parse_loc.mli  Parser.mly  Pattern.ml  Pattern.mli  Printer.ml  Printer.mli  Slice.ml  Slice.mli  Stimsym.ml  Subst.ml  Subst.mli  dune  jbuild  stimsym.mldylib  stimsym.mlpack
src/ipython/: Client.ml  Client.mli  Ipython_json.atd  Ipython_json_j.ml  Ipython_json_j.mli  Ipython_json_t.ml  Ipython_json_t.mli  base64.ml  libipython_frontend_stubs.clib  log.ml  log.mli  message.ml  message.mli  sockets.ml  sockets.mli
src/server/: dune  ipython_server.ml  jbuild  stimsym_server.ml
tests/: dune  jbuild  run_tests.ml
