opam-version: "2.0"
name: "stimsym-server"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Rewrite system designed for symbolic manipulations and maximal expressiveness (Jupyter kernel)"
build: [
  ["dune" "build" "@install""-p" name "-j" jobs]
  [ "dune" "build" "@doc" ] {with-doc}
  [ "dune" "build" "@test" ] {with-test}
]
depends: [
    "dune" {>= "1.0"}
    "base-bytes"
    "result"
    "containers" { >= "1.0" }
    "iter"
    "linenoise"
    "base-unix"
    "ocaml" {>= "4.02.0"}
    "jupyter-kernel" { >= "0.4" & < "0.5" }
    "tyxml"
]
tags: [ "rewriting" "cas" "logic" "mathematica" "jupyter" ]
homepage: "https://github.com/c-cube/stimsym/"
dev-repo: "git+https://github.com/c-cube/stimsym.git"
bug-reports: "https://github.com/c-cube/stimsym/issues/"
