opam-version: "1.2"
name: "stimsym"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    [make "build"]
]
build-doc: [ "jbuilder" "doc" ]
build-test: [ make "test" ]
depends: [
    "jbuilder" {build}
    "base-bytes"
    "result"
    "containers" { >= "1.0" }
    "sequence"
    "linenoise"
    "base-unix"
]
depopts: [
    "jupyter-kernel"
    "tyxml"
]
tags: [ "rewriting" "cas" "logic" "mathematica" "jupyter" ]
homepage: "https://github.com/c-cube/stimsym/"
available: [ocaml-version >= "4.02.0"]
dev-repo: "https://github.com/c-cube/stimsym.git"
bug-reports: "https://github.com/c-cube/stimsym/issues/"
