opam-version: "2.0"
name: "stimsym"
version: "dev"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Rewrite system designed for symbolic manipulations and maximal expressiveness"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
    "dune" {>= "1.0"}
    "base-bytes"
    "result"
    "containers" { >= "1.0" }
    "iter"
    "linenoise"
    "base-unix"
    "zarith"
    "menhir"
    "ounit" {with-test}
]
tags: [ "rewriting" "cas" "logic" "mathematica" "jupyter" ]
homepage: "https://github.com/c-cube/stimsym/"
dev-repo: "git+https://github.com/c-cube/stimsym.git"
bug-reports: "https://github.com/c-cube/stimsym/issues/"
